// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with custom text 1`] = `
<div
  aria-live="assertive"
  className="spinner-container"
  role="alert"
>
  <div
    className="spinner"
  />
  <p
    className="govuk-body"
  >
    custom spinner text
  </p>
</div>
`;

exports[`renders correctly with default text 1`] = `
<div
  aria-live="assertive"
  className="spinner-container"
  role="alert"
>
  <div
    className="spinner"
  />
  <p
    className="govuk-body"
  >
    Please wait while we process your information.
  </p>
</div>
`;

exports[`when B2C is showing or hiding its own spinner shows our spinner while showB2CSpinner is true 1`] = `null`;

exports[`when B2C is showing or hiding its own spinner shows our spinner while showB2CSpinner is true 2`] = `
<div
  aria-live="assertive"
  className="spinner-container"
  role="alert"
>
  <div
    className="spinner"
  />
  <p
    className="govuk-body"
  >
    Please wait while we process your information.
  </p>
</div>
`;

exports[`when B2C is showing or hiding its own spinner shows our spinner while showB2CSpinner is true 3`] = `null`;
